--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <div class="contenedor">
       <form action="" id="formulario" class="formulario">
         <input type="text" placeholder="Escribe el texto o URL" />
+
         <button class="btn">Generar QR</button>
       </form>
-      <canvas id="canvas"></canvas>
+      <p class="press">Presiona la imagen para descargar el SVG pelotudo/a</p>
+      <div class="content"></div>
       <div id="list"></div>
     </div>
   </body>
