--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="qrcode.1.5.1.min.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <script defer src="qrcode.1.5.1.min.js"></script>
 
-    <script defer src="app.js"></script>
-    <title>Código QR</title>
-  </head>
-  <body>
-    <div class="contenedor">
-      <form action="" id="formulario" class="formulario">
-        <input type="text" placeholder="Escribe el texto o URL" />
+        <script defer src="app.js"></script>
+        <title>Código QR</title>
+    </head>
+    <body>
+        <div class="contenedor">
+            <form action="" id="formulario" class="formulario">
+                <input type="text" placeholder="Escribe el texto o URL" />
 
-        <button class="btn">Generar QR</button>
-      </form>
-      <p class="press">Presiona la imagen para descargar el SVG pelotudo/a</p>
-      <div class="content"></div>
-      <div id="list"></div>
-    </div>
-  </body>
+                <button class="btn">Generar QR</button>
+            </form>
+            <p class="press">Presiona la imagen para descargar el SVG</p>
+            <div class="content"></div>
+            <div id="list"></div>
+        </div>
+    </body>
 </html>
