footer with links added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,25 @@
             <div class="content"></div>
             <div id="list"></div>
         </div>
+        <footer>
+            <p class="footer__created">
+                Creado por
+                <a
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    href="https://github.com/shompys"
+                    >Shompys</a
+                >
+            </p>
+            <p class="footer__created">
+                Si queres contribuir al proyecto (laburar gratis) tirame un PR:
+                <a
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    href="https://github.com/shompys/QR"
+                    >Repositorio</a
+                >
+            </p>
+        </footer>
     </body>
 </html>
